--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.16",
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
     "@types/uuid": "^9.0.6",
