--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
+    "@types/nodemailer": "^6.4.14",
+    "@types/otp-generator": "^4.0.2",
     "@types/uuid": "^9.0.6",
     "typescript": "^5.2.2"
   },
@@ -26,7 +28,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "otp-generator": "^4.0.1",
     "uuid": "^9.0.1"
   },
   "engines": {
