--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "nodemon": "^3.0.1",
     "otp-generator": "^4.0.1",
     "uuid": "^9.0.1"
+  },
+  "engines": {
+    "node": ">=15"
   }
- 
 }
